--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "user-sentiments",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
